--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <li><a href="https://www.linkedin.com/en/fespinosa7">LinkedIn</a></li>
             <li><a href="https://github.com/fespinosa7">GitHub</a></li>
         </ol>
-
+	
     </section>
+	<footer>&#169; Franz Espinosa</footer>
 </main>
 </html>
