--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<title>Franz Espinosa | Software Developer | Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
+	
+<body>
+	
 <header>
     <div class="logo">Franz Espinosa</div>
     <h2>Software Developer</h2>
@@ -38,4 +40,5 @@
     </section>
 	<footer>&#169; Franz Espinosa</footer>
 </main>
+	</body>
 </html>
