--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
 <header>
-    <div class="logo">Franz Espinosa</div>
+    <div class="shadowbox">Franz Espinosa</div>
     <h2>Software Developer</h2>
 </header>
 
 <main>
 <hr>
     <section>
-        <h1>Greetings and Salutations! My name is Franz Espinosa.</h1>
+        <h1>Greetings and Salutations!</h1>
+	    <h2>My name is Franz Espinosa.</h2>
         <p>I am an aspiring software developer currently located in sunny Orlando, FL!</p>
     </section>
 <hr>
@@ -24,7 +25,7 @@
         <h2>About the Franz!</h2>
         <p>I started my coding journey in the Xanga and MySpace days! Remember them??</p>
         <p>As a Filipino, Nursing was the only career choice made for me at an early age. But thanks to <a href="https://www.thinkful.com">Thinkful</a>, I have the opportunity and resources to be able to have a career in something I'm passionate about.</p>
-        
+       
     </article>
 <hr>
     <section id="contact">
