--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2 class="border-top">Contact Franzy</h2>
         <p>Please, feel free to reach out! Contact info listed below</p>
         <ol>
-            <li><a href="https://www.linkedin.com/en/fespinosa7">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/fespinosa7">LinkedIn</a></li>
             <li><a href="https://github.com/fespinosa7">GitHub</a></li>
         </ol>
 
