--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <h2>About the Franz!</h2>
         <p>I started my coding journey in the Xanga and MySpace days! Remember them??</p>
         <p>As a Filipino, Nursing was the only career choice made for me at an early age. But thanks to <a href="https://www.thinkful.com">Thinkful</a>, I have the opportunity and resources to be able to have a career in something I'm passionate about.</p>
-       
+	    <p>I currently have 2 corgis!</p>
+	    <ul>
+		    <li>Luna - Full Pembroke Welsh Corgi</li>
+		    <li>Bear - Half Pembroke and Half Cardigan</li>
+		    <img src="\images\luna-and-bear.jpeg" alt = "My corgis!">
     </article>
 <hr>
     <section id="contact">
