--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	    <ul>
 		    <li>Luna - Full Pembroke Welsh Corgi</li>
 		    <li>Bear - Half Pembroke and Half Cardigan</li>
-		    <img src="\images\luna-and-bear.jpeg" alt = "My corgis!">
+		    <img src="\images\luna-and-bear.jpg" alt = "My corgis!">
     </article>
 <hr>
     <section id="contact">
