--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		    <li>Luna - Full Pembroke Welsh Corgi</li>
 		    <li>Bear - Half Pembroke and Half Cardigan</li>
 	    </ul>
-		    <img src="\images\luna-and-bear.jpg" alt = "My corgis!">
+		    <img src="/images/luna-and-bear.jpg" alt = "My corgis!">
     </article>
 <hr>
     <section id="contact">
